<resources>
  <string name="app_name">YouNDevice</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="button_login">Login</string>
  <string name="logout">Logout</string>
  <string name="error_login_internet">Please check your internet connection</string>
  <string name="error_login_credential">Please check email and password</string>
  <string name="menu_sample">Sample</string>
  <string name="menu_settings">Settings</string>
  <string name="application_name">YouNDevice</string>


  <string name="settings_category_account">Account</string>
  <string name="settings_description_account_sign_out">Remove account and start from scratch.</string>
  <string name="settings_title_account_sign_out">Sign Out</string>
  <string name="title_settings">Settings</string>

  <string name="sign_out_complete">Sign out completed</string>
  <string name="unknown_sign_in_response">unknown_sign_in_response</string>
  <string name="unknown_error">unknown_error</string>
  <string name="no_internet_connection">no_internet_connection</string>
  <string name="sign_in_cancelled">sign_in_cancelled</string>
  <string name="sign_in_complete">sign_in_complete</string>
  <string name="sign_in">sign in</string>
  <string name="sign_out">sign out</string>
  <string name="button_retry">Retry</string>
  <string name="message_general">Nothing to show here.</string>
  <string name="message_empty">Nothing to show here.</string>
  <string name="message_empty_tip">Add more of youndevice</string>
  <string name="device_on">Device is turned On</string>
  <string name="device_off">Device is turned Off</string>
  <string name="search">Search</string>
  <string name="title_home">Home</string>
  <string name="menu_home">Home</string>
  <string name="device_name">Device name</string>
  <string name="device_id">Device ID</string>
  <string name="button_update_device">Update Device</string>
  <string name="button_add_device">Add Device</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
