<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

  <include
      layout="@layout/layout_toolbar"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="top"
      android:padding="20dp"
      android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <EditText
          android:id="@+id/device_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/device_name"
          android:imeOptions="actionNext"
          android:inputType="text"
          android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <EditText
          android:id="@+id/device_id"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:imeOptions="actionDone"
          android:hint="@string/device_id"
          android:inputType="text"
          android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_add_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_add_device"/>

  </LinearLayout>

</LinearLayout>